--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@types/express": "^4.17.9",
         "@types/morgan": "^1.9.2",
+        "@types/multer": "^1.4.4",
         "express": "^4.17.1",
         "mongoose": "^5.10.15",
         "morgan": "^1.10.0",
