--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "dependencies": {
         "@types/express": "^4.17.9",
+        "@types/mongoose": "^5.10.1",
         "@types/morgan": "^1.9.2",
         "@types/multer": "^1.4.4",
         "express": "^4.17.1",
