--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
         "@types/mongoose": "^5.10.1",
         "@types/morgan": "^1.9.2",
         "@types/multer": "^1.4.4",
+        "@types/multer-s3": "^2.7.8",
+        "aws-sdk": "^2.796.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.10.15",
         "morgan": "^1.10.0",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "multer-s3": "^2.9.0"
     },
     "scripts": {
         "start": "node dist/server.js",
