--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.9",
         "@types/mongoose": "^5.10.1",
         "@types/morgan": "^1.9.2",
