--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "mongoose": "^5.10.15",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
-        "multer-s3": "^2.9.0"
+        "multer-s3": "^2.9.0",
+        "ts-dotenv": "^0.8.1"
     },
     "scripts": {
         "start": "node dist/server.js",
