--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "server.js",
     "license": "MIT",
     "dependencies": {
         "@types/cors": "^2.8.9",
